--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.37.0",
+    "@iconify/json": "^2.2.40",
+    "@iconify/vue": "^4.1.0",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.5",
+    "@unocss/preset-icons": "^0.50.6",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
@@ -38,7 +41,17 @@
     "stylelint-scss": "^4.6.0",
     "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
+    "unocss": "^0.50.6",
+    "unplugin-auto-import": "^0.15.2",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.2.0",
+    "vite-plugin-banner": "^0.7.0",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-pwa": "^0.14.6",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-inspector": "^3.4.0",
+    "vite-plugin-vue-setup-extend": "^0.4.0",
     "vue-tsc": "^1.2.0"
   }
 }
