--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,10 @@
 {
   "extends": "@antfu",
   "rules": {
+    "eslint-comments/no-unlimited-disable": "off",
     "curly": ["error", "all"],
-    "no-mixed-operators":["error"] 
+    "vue/component-tags-order": ["error", {
+      "order": ["route", "script", "template", "style"]
+    }]
   }
 }
