--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "element-plus": "^2.3.1",
     "lodash-es": "^4.17.21",
+    "mockjs": "^1.1.0",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.0.33",
     "vue": "^3.2.47",
-    "vue-i18n": "^9.2.2"
+    "vue-i18n": "^9.2.2",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.37.0",
@@ -40,6 +44,7 @@
     "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-scss": "^4.6.0",
     "tailwindcss": "^3.2.7",
+    "terser": "^5.16.8",
     "typescript": "^4.9.3",
     "unocss": "^0.50.6",
     "unplugin-auto-import": "^0.15.2",
@@ -48,6 +53,7 @@
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-mock": "^2.9.6",
     "vite-plugin-pwa": "^0.14.6",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-inspector": "^3.4.0",
