--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.5",
+    "@types/path-browserify": "^1.0.0",
     "@unocss/preset-icons": "^0.50.6",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
