--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 # 页面标题
-VITE_APP_TITLE = Fantastic-admin 专业版
+VITE_APP_TITLE = admin 专业版
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
 VITE_APP_API_BASEURL = /
 # 调试工具，可设置 eruda 或 vconsole，如果不需要开启则留空
