--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix"
   },
   "dependencies": {
+    "@imengyu/vue3-context-menu": "^1.2.5",
+    "@vueuse/core": "^10.0.2",
     "axios": "^1.3.5",
     "element-plus": "^2.3.1",
+    "hotkeys-js": "^3.10.2",
     "lodash-es": "^4.17.21",
+    "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
     "path-browserify": "^1.0.1",
+    "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.33",
+    "sortablejs": "^1.15.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-router": "4"
@@ -31,6 +37,7 @@
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.15.5",
     "@types/path-browserify": "^1.0.0",
+    "@types/sortablejs": "^1.15.1",
     "@unocss/preset-icons": "^0.50.6",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
