--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.2.5",
     "@vueuse/core": "^10.0.2",
+    "@vueuse/integrations": "^10.1.0",
     "axios": "^1.3.5",
     "element-plus": "^2.3.1",
     "hotkeys-js": "^3.10.2",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
     "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.33",
