--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       ]
     },
     "types": [
-      "vite/client",
+      // "vite/client",
       "element-plus/global",
       "@intlify/unplugin-vue-i18n/messages"
     ]
