--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": "@antfu",
   "rules": {
+    "vue/no-template-shadow": "off",
     "eslint-comments/no-unlimited-disable": "off",
     "curly": ["error", "all"],
     "vue/component-tags-order": ["error", {
