--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "preview": "vite preview",
     "lint": "npm-run-all -s lint:tsc lint:eslint lint:stylelint",
     "lint:tsc": "vue-tsc --noEmit",
-    "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
-    "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix"
+    "lint:eslint": "eslint --cache --fix --no-ignore --no-error-on-unmatched-pattern --ext .ts,.tsx,.vue src/",
+    "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix --allow-empty-input"
   },
   "dependencies": {
     "@imengyu/vue3-context-menu": "^1.2.5",
-    "@vueuse/core": "^10.0.2",
+    "@vueuse/core": "^10.1.0",
     "@vueuse/integrations": "^10.1.0",
-    "axios": "^1.3.5",
-    "element-plus": "^2.3.1",
+    "axios": "^1.3.6",
+    "element-plus": "^2.3.4",
     "hotkeys-js": "^3.10.2",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
@@ -25,49 +25,53 @@
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
-    "pinia": "^2.0.33",
+    "pinia": "^2.0.35",
     "sortablejs": "^1.15.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
-    "vue-router": "4"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.37.0",
-    "@iconify/json": "^2.2.40",
-    "@iconify/vue": "^4.1.0",
+    "@antfu/eslint-config": "^0.38.5",
+    "@iconify/json": "^2.2.56",
+    "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.15.5",
+    "@types/node": "^18.16.1",
+    "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@types/sortablejs": "^1.15.1",
-    "@unocss/preset-icons": "^0.50.6",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@unocss/preset-icons": "^0.50.8",
+    "@vitejs/plugin-vue": "^4.2.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
+    "eslint": "^8.39.0",
+    "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
-    "sass": "^1.59.3",
-    "stylelint": "^15.3.0",
+    "sass": "^1.62.1",
+    "stylelint": "^15.6.0",
     "stylelint-config-standard": "^31.0.0",
     "stylelint-config-standard-scss": "^7.0.1",
     "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-scss": "^4.6.0",
-    "tailwindcss": "^3.2.7",
-    "terser": "^5.16.8",
-    "typescript": "^4.9.3",
-    "unocss": "^0.50.6",
-    "unplugin-auto-import": "^0.15.2",
+    "stylelint-stylistic": "^0.4.0",
+    "tailwindcss": "^3.3.2",
+    "terser": "^5.17.1",
+    "typescript": "^4.9.5",
+    "unocss": "^0.50.8",
+    "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.2.0",
+    "unplugin-vue-setup-extend-plus": "^1.0.0",
+    "vite": "^4.3.3",
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
-    "vite-plugin-mock": "^2.9.6",
-    "vite-plugin-pwa": "^0.14.6",
+    "vite-plugin-mock": "^2.9.8",
+    "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-inspector": "^3.4.0",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.6.0"
   }
 }
