--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
+    "generate:icons": "esno ./scripts/generate.icons.js",
     "lint": "npm-run-all -s lint:tsc lint:eslint lint:stylelint",
     "lint:tsc": "vue-tsc --noEmit",
     "lint:eslint": "eslint --cache --fix --no-ignore --no-error-on-unmatched-pattern --ext .ts,.tsx,.vue src/",
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix --allow-empty-input"
   },
   "dependencies": {
-    "@imengyu/vue3-context-menu": "^1.2.5",
+    "@imengyu/vue3-context-menu": "^1.2.6",
     "@vueuse/core": "^10.1.0",
     "@vueuse/integrations": "^10.1.0",
-    "axios": "^1.3.6",
+    "axios": "^1.4.0",
     "element-plus": "^2.3.4",
     "hotkeys-js": "^3.10.2",
     "lodash-es": "^4.17.21",
@@ -33,11 +34,11 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.5",
-    "@iconify/json": "^2.2.56",
+    "@iconify/json": "^2.2.57",
     "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.16.1",
+    "@types/node": "^18.16.3",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@types/sortablejs": "^1.15.1",
@@ -45,6 +46,8 @@
     "@vitejs/plugin-vue": "^4.2.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.39.0",
+    "esno": "^0.16.3",
+    "inquirer": "^9.2.0",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
@@ -70,8 +73,8 @@
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-inspector": "^3.4.0",
+    "vite-plugin-vue-inspector": "^3.4.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^1.6.0"
+    "vue-tsc": "^1.6.1"
   }
 }
