添加收藏夹 - 修复标签效果

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,6 +5,7 @@
     "dbaeumer.vscode-eslint",
     "stylelint.vscode-stylelint",
     "bradlc.vscode-tailwindcss",
+    "antfu.iconify",
     "Vue.volar", 
     "Vue.vscode-typescript-vue-plugin",
     "Lokalise.i18n-ally"
