--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
+    "serve:test": "http-server ./dist-test -o",
+    "serve": "http-server ./dist -o",
+    "svgo": "svgo -f src/assets/icons",
+    "new": "plop",
     "generate:icons": "esno ./scripts/generate.icons.js",
     "lint": "npm-run-all -s lint:tsc lint:eslint lint:stylelint",
     "lint:tsc": "vue-tsc --noEmit",
@@ -50,6 +54,7 @@
     "inquirer": "^9.2.0",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
+    "plop": "^3.1.2",
     "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
     "sass": "^1.62.1",
