--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.0.35",
+    "qs": "^6.11.1",
     "sortablejs": "^1.15.0",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
@@ -44,6 +45,7 @@
     "@types/node": "^18.16.3",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
+    "@types/qs": "^6.9.7",
     "@types/sortablejs": "^1.15.1",
     "@unocss/preset-icons": "^0.50.8",
     "@vitejs/plugin-vue": "^4.2.1",
