--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 页面标题
 VITE_APP_TITLE = admin 专业版
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
-VITE_APP_API_BASEURL = /
+VITE_APP_API_BASEURL = 127.0.0.1:7001
 # 调试工具，可设置 eruda 或 vconsole，如果不需要开启则留空
 VITE_APP_DEBUG_TOOL =
 
