--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix --allow-empty-input"
   },
   "dependencies": {
-    "@imengyu/vue3-context-menu": "^1.2.6",
-    "@vueuse/core": "^10.1.0",
-    "@vueuse/integrations": "^10.1.0",
+    "@imengyu/vue3-context-menu": "^1.2.10",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/integrations": "^10.1.2",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.4",
+    "element-plus": "^2.3.5",
     "hotkeys-js": "^3.10.2",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
@@ -29,58 +29,58 @@
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
-    "pinia": "^2.0.35",
-    "qs": "^6.11.1",
+    "pinia": "^2.1.3",
+    "qs": "^6.11.2",
     "sortablejs": "^1.15.0",
-    "vue": "^3.2.47",
+    "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.2.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.5",
-    "@iconify/json": "^2.2.57",
+    "@antfu/eslint-config": "^0.38.6",
+    "@iconify/json": "^2.2.69",
     "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.16.3",
+    "@types/node": "^18.16.15",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@types/qs": "^6.9.7",
     "@types/sortablejs": "^1.15.1",
     "@unocss/preset-icons": "^0.50.8",
-    "@vitejs/plugin-vue": "^4.2.1",
+    "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.39.0",
+    "eslint": "^8.41.0",
     "esno": "^0.16.3",
-    "inquirer": "^9.2.0",
+    "http-server": "^14.1.1",
+    "inquirer": "^9.2.6",
     "lint-staged": "^13.2.2",
     "npm-run-all": "^4.1.5",
     "plop": "^3.1.2",
     "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
     "sass": "^1.62.1",
-    "stylelint": "^15.6.0",
-    "stylelint-config-standard": "^31.0.0",
-    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint": "^15.6.2",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^4.6.0",
-    "stylelint-stylistic": "^0.4.0",
+    "stylelint-scss": "^5.0.0",
+    "stylelint-stylistic": "^0.4.2",
+    "svgo": "^3.0.2",
     "tailwindcss": "^3.3.2",
-    "terser": "^5.17.1",
-    "typescript": "^4.9.5",
-    "unocss": "^0.50.8",
-    "unplugin-auto-import": "^0.15.3",
+    "terser": "^5.17.6",
+    "typescript": "^5.0.4",
+    "unocss": "^0.52.3",
+    "unplugin-auto-import": "^0.16.2",
     "unplugin-vue-components": "^0.24.1",
-    "unplugin-vue-setup-extend-plus": "^1.0.0",
-    "vite": "^4.3.3",
+    "vite": "^4.3.8",
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-inspector": "^3.4.1",
-    "vite-plugin-vue-setup-extend": "^0.4.0",
-    "vue-tsc": "^1.6.1"
+    "vite-plugin-vue-inspector": "^3.4.2",
+    "vue-tsc": "^1.6.5"
   }
 }
