--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/integrations": "^10.1.2",
     "axios": "^1.4.0",
     "element-plus": "^2.3.5",
+    "eruda": "^3.0.0",
     "hotkeys-js": "^3.10.2",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.0",
@@ -32,6 +33,7 @@
     "pinia": "^2.1.3",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.0",
+    "vconsole": "^3.15.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.1"
@@ -76,7 +78,6 @@
     "vite": "^4.3.8",
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-html": "^3.2.0",
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
