添加 rollup-plugin-visualizer 修改 README.md

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
+    "report": "cross-env REPORT=true npm run build",
     "preview": "vite preview",
     "serve:test": "http-server ./dist-test -o",
     "serve": "http-server ./dist -o",
@@ -44,7 +45,6 @@
     "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
     "@types/lodash-es": "^4.17.7",
-    "@types/node": "^18.16.15",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@types/qs": "^6.9.7",
@@ -52,6 +52,7 @@
     "@unocss/preset-icons": "^0.50.8",
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
+    "cross-env": "^7.0.3",
     "eslint": "^8.41.0",
     "esno": "^0.16.3",
     "http-server": "^14.1.1",
@@ -61,6 +62,8 @@
     "plop": "^3.1.2",
     "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
+    "rollup": "^3.23.0",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.1",
     "stylelint": "^15.6.2",
     "stylelint-config-standard": "^33.0.0",
