--- a/.env.production
+++ b/.env.production
@@ -12,6 +12,8 @@ VITE_BUILD_SOURCEMAP = false
 # 是否在打包时删除 console 代码
 VITE_BUILD_DROP_CONSOLE = true
 # 是否在打包时开启压缩，支持 gzip 和 brotli
-VITE_BUILD_COMPRESS = gzip,brotli
+VITE_BUILD_COMPRESS =
 # 是否在打包时候生成PWA
 VITE_BUILD_PWA = false
+# 是否在打包时生成报告
+# VITE_BUILD_REPORT = true
