--- a/package.json
+++ b/package.json
@@ -18,33 +18,40 @@
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix --allow-empty-input"
   },
   "dependencies": {
-    "@imengyu/vue3-context-menu": "^1.2.10",
-    "@vueuse/core": "^10.1.2",
-    "@vueuse/integrations": "^10.1.2",
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/theme-one-dark": "^6.1.2",
+    "@imengyu/vue3-context-menu": "^1.3.3",
+    "@vueuse/core": "^10.2.1",
+    "@vueuse/integrations": "^10.2.1",
     "axios": "^1.4.0",
-    "element-plus": "^2.3.5",
-    "eruda": "^3.0.0",
-    "hotkeys-js": "^3.10.2",
+    "codemirror": "^6.0.1",
+    "element-plus": "^2.3.8",
+    "eruda": "^3.0.1",
+    "hotkeys-js": "^3.11.2",
     "lodash-es": "^4.17.21",
-    "mitt": "^3.0.0",
+    "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
-    "pinia": "^2.1.3",
+    "pinia": "^2.1.6",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.0",
-    "vconsole": "^3.15.0",
+    "vconsole": "^3.15.1",
     "vue": "^3.3.4",
+    "vue-codemirror": "^6.1.1",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.1"
+    "vue-json-pretty": "^2.2.4",
+    "vue-router": "^4.2.4",
+    "vue3-blocks-tree": "^0.6.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.6",
-    "@iconify/json": "^2.2.70",
+    "@iconify/json": "^2.2.95",
     "@iconify/vue": "^4.1.1",
-    "@intlify/unplugin-vue-i18n": "^0.10.0",
-    "@types/lodash-es": "^4.17.7",
+    "@intlify/unplugin-vue-i18n": "^0.10.1",
+    "@types/lodash-es": "^4.17.8",
     "@types/nprogress": "^0.2.0",
     "@types/path-browserify": "^1.0.0",
     "@types/qs": "^6.9.7",
@@ -53,38 +60,38 @@
     "@vitejs/plugin-vue": "^4.2.3",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
-    "eslint": "^8.41.0",
+    "eslint": "^8.46.0",
     "esno": "^0.16.3",
     "http-server": "^14.1.1",
-    "inquirer": "^9.2.6",
-    "lint-staged": "^13.2.2",
+    "inquirer": "^9.2.9",
+    "lint-staged": "^13.2.3",
     "npm-run-all": "^4.1.5",
     "plop": "^3.1.2",
-    "postcss": "^8.4.23",
+    "postcss": "^8.4.27",
     "postcss-html": "^1.5.0",
-    "rollup": "^3.23.0",
-    "rollup-plugin-visualizer": "^5.9.0",
-    "sass": "^1.62.1",
-    "stylelint": "^15.6.2",
+    "rollup": "^3.27.0",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "sass": "^1.64.1",
+    "stylelint": "^15.10.2",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^5.0.0",
-    "stylelint-stylistic": "^0.4.2",
+    "stylelint-scss": "^5.0.1",
+    "stylelint-stylistic": "^0.4.3",
     "svgo": "^3.0.2",
-    "tailwindcss": "^3.3.2",
-    "terser": "^5.17.6",
-    "typescript": "^5.0.4",
-    "unocss": "^0.52.3",
-    "unplugin-auto-import": "^0.16.2",
+    "tailwindcss": "^3.3.3",
+    "terser": "^5.19.2",
+    "typescript": "^5.1.6",
+    "unocss": "^0.52.7",
+    "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.8",
+    "vite": "^4.4.7",
     "vite-plugin-banner": "^0.7.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-inspector": "^3.4.2",
-    "vue-tsc": "^1.6.5"
+    "vite-plugin-vue-inspector": "^3.5.0",
+    "vue-tsc": "^1.8.8"
   }
 }
