文件上传封装，弹出框封装

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       ]
     },
     "types": [
+      "vite/client",
       "element-plus/global",
       "@intlify/unplugin-vue-i18n/messages"
     ]
