--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@imengyu/vue3-context-menu": "^1.3.3",
     "@vueuse/core": "^10.2.1",
     "@vueuse/integrations": "^10.2.1",
+    "add": "^2.0.6",
     "axios": "^1.4.0",
     "codemirror": "^6.0.1",
     "element-plus": "^2.3.8",
     "eruda": "^3.0.1",
     "hotkeys-js": "^3.11.2",
+    "js-base64": "^3.7.5",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
