--- a/package.json
+++ b/package.json
@@ -19,18 +19,18 @@
   },
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
-    "@codemirror/lang-javascript": "^6.1.9",
+    "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@imengyu/vue3-context-menu": "^1.3.3",
-    "@vueuse/core": "^10.2.1",
-    "@vueuse/integrations": "^10.2.1",
+    "@vueuse/core": "^10.5.0",
+    "@vueuse/integrations": "^10.5.0",
     "add": "^2.0.6",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
     "codemirror": "^6.0.1",
-    "element-plus": "^2.3.8",
+    "element-plus": "^2.4.0",
     "eruda": "^3.0.1",
     "highlight.js": "^11.9.0",
-    "hotkeys-js": "^3.11.2",
+    "hotkeys-js": "^3.12.0",
     "js-base64": "^3.7.5",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
@@ -38,63 +38,64 @@
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.0",
     "vconsole": "^3.15.1",
     "vue": "^3.3.4",
     "vue-codemirror": "^6.1.1",
-    "vue-i18n": "^9.2.2",
+    "vue-i18n": "^9.5.0",
     "vue-json-pretty": "^2.2.4",
-    "vue-router": "^4.2.4",
+    "vue-router": "^4.2.5",
     "vue3-blocks-tree": "^0.6.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.6",
-    "@iconify/json": "^2.2.95",
+    "@iconify/json": "^2.2.128",
     "@iconify/vue": "^4.1.1",
     "@intlify/unplugin-vue-i18n": "^0.10.1",
-    "@types/lodash-es": "^4.17.8",
-    "@types/nprogress": "^0.2.0",
+    "@types/lodash-es": "^4.17.9",
+    "@types/nprogress": "^0.2.1",
     "@types/path-browserify": "^1.0.0",
-    "@types/qs": "^6.9.7",
-    "@types/sortablejs": "^1.15.1",
+    "@types/qs": "^6.9.8",
+    "@types/sortablejs": "^1.15.3",
     "@unocss/preset-icons": "^0.50.8",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "autoprefixer": "^10.4.14",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.46.0",
+    "eslint": "^8.51.0",
     "esno": "^0.16.3",
     "http-server": "^14.1.1",
-    "inquirer": "^9.2.9",
-    "lint-staged": "^13.2.3",
+    "inquirer": "^9.2.11",
+    "lint-staged": "^13.3.0",
     "npm-run-all": "^4.1.5",
     "plop": "^3.1.2",
-    "postcss": "^8.4.27",
+    "postcss": "^8.4.31",
     "postcss-html": "^1.5.0",
-    "rollup": "^3.27.0",
+    "rollup": "^3.29.4",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.64.1",
-    "stylelint": "^15.10.2",
+    "sass": "^1.69.3",
+    "stylelint": "^15.10.3",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^5.0.1",
+    "stylelint-scss": "^5.2.1",
     "stylelint-stylistic": "^0.4.3",
     "svgo": "^3.0.2",
     "tailwindcss": "^3.3.3",
-    "terser": "^5.19.2",
-    "typescript": "^5.1.6",
+    "terser": "^5.21.0",
+    "typescript": "^5.2.2",
     "unocss": "^0.52.7",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.4.7",
-    "vite-plugin-banner": "^0.7.0",
+    "vite": "^4.4.11",
+    "vite-plugin-banner": "^0.7.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-inspector": "^3.5.0",
-    "vue-tsc": "^1.8.8"
+    "vite-plugin-vue-devtools": "1.0.0-rc.5",
+    "vite-plugin-vue-inspector": "^3.7.2",
+    "vue-tsc": "^1.8.19"
   }
 }
