--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,58 +1,47 @@
 {
   "extends": [
-    "stylelint-config-standard",
+    "stylelint-stylistic/config",
     "stylelint-config-standard-scss",
-    "stylelint-config-standard-vue/scss",
-    "stylelint-stylistic"
+    "stylelint-config-standard-vue/scss"
   ],
   "plugins": [
     "stylelint-scss"
   ],
   "rules": {
-    "at-rule-no-unknown": [
-      true,
+    "stylistic/max-line-length": null,
+    "stylistic/block-closing-brace-newline-after": [
+      "always",
       {
         "ignoreAtRules": [
-          "tailwind",
-          "apply",
-          "variants",
-          "responsive",
-          "screen",
-          "mixin",
-          "else",
           "if",
-          "use",
-          "forward",
-          "include",
-          "each"
+          "else"
         ]
       }
     ],
-    "scss/at-rule-no-unknown": [
-      true,
-      {
-        "ignoreAtRules": [
-          "tailwind",
-          "apply",
-          "variants",
-          "responsive",
-          "screen",
-          "mixin",
-          "else",
-          "if",
-          "use",
-          "forward",
-          "include",
-          "each"
-        ]
-      }
-    ],
-    "declaration-block-trailing-semicolon": null,
+    "at-rule-no-unknown": null,
     "no-descending-specificity": null,
     "property-no-unknown": null,
     "font-family-no-missing-generic-family-keyword": null,
     "selector-class-pattern": null,
-    "max-line-length": null,
+    "function-no-unknown": [
+      true,
+      {
+        "ignoreFunctions": [
+          "v-bind",
+          "map-get",
+          "lighten",
+          "darken"
+        ]
+      }
+    ],
+    "selector-pseudo-element-no-unknown": [
+      true,
+      {
+        "ignorePseudoElements": [
+          "/^view-transition/"
+        ]
+      }
+    ],
     "scss/double-slash-comment-empty-line-before": null,
     "scss/no-global-function-names": null
   }
