--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue3-ts",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
@@ -13,22 +14,24 @@
     "new": "plop",
     "generate:icons": "esno ./scripts/generate.icons.js",
     "lint": "npm-run-all -s lint:tsc lint:eslint lint:stylelint",
-    "lint:tsc": "vue-tsc --noEmit",
-    "lint:eslint": "eslint --cache --fix --no-ignore --no-error-on-unmatched-pattern --ext .ts,.tsx,.vue src/",
+    "lint:tsc": "vue-tsc",
+    "lint:eslint": "eslint . --cache --fix",
     "lint:stylelint": "stylelint src/**/*.{css,scss,vue} --cache --fix --allow-empty-input"
   },
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@headlessui/vue": "^1.7.16",
     "@imengyu/vue3-context-menu": "^1.3.3",
     "@vueuse/core": "^10.5.0",
     "@vueuse/integrations": "^10.5.0",
     "add": "^2.0.6",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "codemirror": "^6.0.1",
-    "element-plus": "^2.4.0",
+    "element-plus": "^2.4.1",
     "eruda": "^3.0.1",
+    "floating-vue": "2.0.0-beta.24",
     "highlight.js": "^11.9.0",
     "hotkeys-js": "^3.12.0",
     "js-base64": "^3.7.5",
@@ -36,15 +39,16 @@
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "overlayscrollbars-vue": "^0.5.6",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "sortablejs": "^1.15.0",
     "vconsole": "^3.15.1",
-    "vue": "^3.3.4",
+    "vue": "^3.3.7",
     "vue-codemirror": "^6.1.1",
-    "vue-i18n": "^9.5.0",
+    "vue-i18n": "^9.6.2",
     "vue-json-pretty": "^2.2.4",
     "vue-router": "^4.2.5",
     "vue3-blocks-tree": "^0.6.1",
@@ -53,52 +57,50 @@
     "xe-utils": "^3.5.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.38.6",
-    "@iconify/json": "^2.2.128",
+    "@antfu/eslint-config": "1.0.0-beta.29",
+    "@iconify/json": "^2.2.134",
     "@iconify/vue": "^4.1.1",
-    "@intlify/unplugin-vue-i18n": "^0.10.1",
-    "@types/lodash-es": "^4.17.9",
-    "@types/nprogress": "^0.2.1",
-    "@types/path-browserify": "^1.0.0",
-    "@types/qs": "^6.9.8",
-    "@types/sortablejs": "^1.15.3",
-    "@unocss/preset-icons": "^0.50.8",
+    "@intlify/unplugin-vue-i18n": "^1.4.0",
+    "@types/lodash-es": "^4.17.10",
+    "@types/nprogress": "^0.2.2",
+    "@types/path-browserify": "^1.0.1",
+    "@types/qs": "^6.9.9",
+    "@types/sortablejs": "^1.15.4",
+    "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-vue": "^4.4.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "autoprefixer": "^10.4.16",
     "cross-env": "^7.0.3",
-    "eslint": "^8.51.0",
-    "esno": "^0.16.3",
+    "eslint": "^8.52.0",
+    "esno": "^0.17.0",
     "http-server": "^14.1.1",
     "inquirer": "^9.2.11",
-    "lint-staged": "^13.3.0",
+    "lint-staged": "^15.0.2",
     "npm-run-all": "^4.1.5",
-    "plop": "^3.1.2",
-    "postcss": "^8.4.31",
+    "plop": "^4.0.0",
     "postcss-html": "^1.5.0",
     "rollup": "^3.29.4",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.69.3",
-    "stylelint": "^15.10.3",
-    "stylelint-config-standard": "^33.0.0",
-    "stylelint-config-standard-scss": "^9.0.0",
+    "sass": "^1.69.5",
+    "stylelint": "^15.11.0",
+    "stylelint-config-standard-scss": "^11.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^5.2.1",
+    "stylelint-scss": "^5.3.0",
     "stylelint-stylistic": "^0.4.3",
     "svgo": "^3.0.2",
-    "tailwindcss": "^3.3.3",
-    "terser": "^5.21.0",
+    "terser": "^5.22.0",
     "typescript": "^5.2.2",
-    "unocss": "^0.52.7",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.4.11",
+    "unocss": "^0.57.1",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.5.0",
     "vite-plugin-banner": "^0.7.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^2.9.8",
     "vite-plugin-pwa": "^0.14.7",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "1.0.0-rc.5",
-    "vite-plugin-vue-inspector": "^3.7.2",
-    "vue-tsc": "^1.8.19"
+    "vite-plugin-vue-inspector": "^4.0.0",
+    "vue-tsc": "^1.8.22"
   }
 }
