修改一些些细节

--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
+# 应用配置面板
+VITE_APP_SETTING = false
 # 页面标题
 VITE_APP_TITLE = admin 专业版
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
@@ -13,5 +15,7 @@ VITE_BUILD_SOURCEMAP = true
 VITE_BUILD_DROP_CONSOLE = true
 # 是否在打包时开启压缩，支持 gzip 和 brotli
 VITE_BUILD_COMPRESS = gzip,brotli
+# 是否在打包后生成存档，支持 zip 和 tar
+VITE_BUILD_ARCHIVE =
 # 是否在打包时候生成PWA
 VITE_BUILD_PWA = false
