--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,5 @@
+# 应用配置面板
+VITE_APP_SETTING = true
 # 页面标题
 VITE_APP_TITLE = admin 专业版
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
@@ -8,3 +10,6 @@ VITE_APP_DEBUG_TOOL =
 # 是否开启代理
 VITE_OPEN_PROXY = true
 VITE_BUILD_PWA = false
+# 是否开启开发者工具
+VITE_OPEN_DEVTOOLS = true
+
