--- a/package.json
+++ b/package.json
@@ -22,84 +22,90 @@
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/theme-one-dark": "^6.1.2",
-    "@headlessui/vue": "^1.7.16",
-    "@imengyu/vue3-context-menu": "^1.3.3",
-    "@vueuse/core": "^10.5.0",
-    "@vueuse/integrations": "^10.5.0",
+    "@headlessui/vue": "^1.7.18",
+    "@imengyu/vue3-context-menu": "^1.3.8",
+    "@vueuse/core": "^10.7.2",
+    "@vueuse/integrations": "^10.7.2",
     "add": "^2.0.6",
-    "axios": "^1.6.0",
+    "axios": "^1.6.7",
     "codemirror": "^6.0.1",
-    "element-plus": "^2.4.1",
+    "element-plus": "^2.5.5",
     "eruda": "^3.0.1",
     "floating-vue": "2.0.0-beta.24",
     "highlight.js": "^11.9.0",
-    "hotkeys-js": "^3.12.0",
-    "js-base64": "^3.7.5",
+    "hotkeys-js": "^3.13.7",
+    "js-base64": "^3.7.6",
     "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
-    "overlayscrollbars-vue": "^0.5.6",
+    "overlayscrollbars-vue": "^0.5.7",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
-    "sortablejs": "^1.15.0",
+    "sortablejs": "^1.15.2",
     "vconsole": "^3.15.1",
-    "vue": "^3.3.7",
+    "vue": "^3.4.15",
     "vue-codemirror": "^6.1.1",
-    "vue-i18n": "^9.6.2",
-    "vue-json-pretty": "^2.2.4",
+    "vue-i18n": "^9.9.1",
+    "vue-json-pretty": "^2.3.0",
     "vue-router": "^4.2.5",
     "vue3-blocks-tree": "^0.6.1",
-    "vxe-table": "4.5.14-beta.0",
-    "vxe-table-plugin-element": "^3.1.1",
-    "xe-utils": "^3.5.13"
+    "vxe-table": "^4.5.18",
+    "vxe-table-plugin-element": "^4.0.0",
+    "xe-utils": "^3.5.20"
   },
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.29",
-    "@iconify/json": "^2.2.134",
+    "@iconify/json": "^2.2.180",
     "@iconify/vue": "^4.1.1",
-    "@types/lodash-es": "^4.17.10",
-    "@types/nprogress": "^0.2.2",
-    "@types/path-browserify": "^1.0.1",
-    "@types/qs": "^6.9.9",
-    "@types/sortablejs": "^1.15.4",
-    "@vitejs/plugin-legacy": "^4.1.1",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "autoprefixer": "^10.4.16",
+    "@stylistic/stylelint-config": "^1.0.1",
+    "@types/lodash-es": "^4.17.12",
+    "@types/mockjs": "^1.0.10",
+    "@types/nprogress": "^0.2.3",
+    "@types/path-browserify": "^1.0.2",
+    "@types/qs": "^6.9.11",
+    "@types/sortablejs": "^1.15.7",
+    "@unocss/eslint-plugin": "^0.58.5",
+    "@vitejs/plugin-legacy": "^5.3.0",
+    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "archiver": "^6.0.1",
+    "autoprefixer": "^10.4.17",
+    "boxen": "^7.1.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.52.0",
+    "eslint": "^8.56.0",
     "esno": "^0.17.0",
     "http-server": "^14.1.1",
-    "inquirer": "^9.2.11",
-    "lint-staged": "^15.0.2",
+    "inquirer": "^9.2.14",
+    "lint-staged": "^15.2.2",
     "npm-run-all": "^4.1.5",
-    "plop": "^4.0.0",
-    "postcss-html": "^1.5.0",
+    "picocolors": "^1.0.0",
+    "plop": "^4.0.1",
+    "postcss-html": "^1.6.0",
     "rollup": "^3.29.4",
-    "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.69.5",
-    "stylelint": "^15.11.0",
-    "stylelint-config-standard-scss": "^11.0.0",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.70.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recess-order": "^4.5.0",
+    "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-scss": "^5.3.0",
-    "stylelint-stylistic": "^0.4.3",
-    "svgo": "^3.0.2",
-    "terser": "^5.22.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.57.1",
+    "stylelint-scss": "^6.1.0",
+    "svgo": "^3.2.0",
+    "terser": "^5.27.0",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.5",
     "unplugin-auto-import": "^0.16.7",
-    "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.5.0",
+    "unplugin-turbo-console": "^1.2.1",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.0.12",
     "vite-plugin-banner": "^0.7.1",
-    "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-mock": "^2.9.8",
-    "vite-plugin-pwa": "^0.14.7",
+    "vite-plugin-compression2": "^0.12.0",
+    "vite-plugin-fake-server": "^2.1.1",
+    "vite-plugin-pwa": "^0.17.5",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "1.0.0-rc.5",
-    "vite-plugin-vue-inspector": "^4.0.0",
-    "vue-tsc": "^1.8.22"
+    "vite-plugin-vue-devtools": "^7.0.14",
+    "vue-tsc": "^1.8.27"
   }
 }
