--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vue3-ts",
   "type": "module",
   "version": "1.0.1",
+  "engines": {
+    "node": "^18.0.0 || ^20.0.0"
+  },
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -22,7 +25,7 @@
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/theme-one-dark": "^6.1.2",
-    "@headlessui/vue": "^1.7.18",
+    "@headlessui/vue": "^1.7.19",
     "@imengyu/vue3-context-menu": "^1.3.8",
     "@vueuse/core": "^10.7.2",
     "@vueuse/integrations": "^10.7.2",
@@ -46,7 +49,7 @@
     "qs": "^6.11.2",
     "sortablejs": "^1.15.2",
     "vconsole": "^3.15.1",
-    "vue": "^3.4.15",
+    "vue": "^3.4.19",
     "vue-codemirror": "^6.1.1",
     "vue-i18n": "^9.9.1",
     "vue-json-pretty": "^2.3.0",
@@ -58,7 +61,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "1.0.0-beta.29",
-    "@iconify/json": "^2.2.180",
+    "@iconify/json": "^2.2.183",
     "@iconify/vue": "^4.1.1",
     "@stylistic/stylelint-config": "^1.0.1",
     "@types/lodash-es": "^4.17.12",
@@ -69,7 +72,7 @@
     "@types/sortablejs": "^1.15.7",
     "@unocss/eslint-plugin": "^0.58.5",
     "@vitejs/plugin-legacy": "^5.3.0",
-    "@vitejs/plugin-vue": "^5.0.3",
+    "@vitejs/plugin-vue": "^5.0.4",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "archiver": "^6.0.1",
     "autoprefixer": "^10.4.17",
@@ -88,18 +91,18 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.70.0",
     "stylelint": "^16.2.1",
-    "stylelint-config-recess-order": "^4.5.0",
+    "stylelint-config-recess-order": "^4.6.0",
     "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "stylelint-scss": "^6.1.0",
     "svgo": "^3.2.0",
-    "terser": "^5.27.0",
+    "terser": "^5.27.1",
     "typescript": "^5.3.3",
     "unocss": "^0.58.5",
     "unplugin-auto-import": "^0.16.7",
-    "unplugin-turbo-console": "^1.2.1",
+    "unplugin-turbo-console": "^1.3.0",
     "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.0.12",
+    "vite": "^5.1.3",
     "vite-plugin-banner": "^0.7.1",
     "vite-plugin-compression2": "^0.12.0",
     "vite-plugin-fake-server": "^2.1.1",
