--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vue-codemirror": "^6.1.1",
     "vue-i18n": "^9.13.1",
     "vue-json-pretty": "^2.3.0",
+    "vue-m-message": "^4.0.2",
     "vue-router": "^4.3.3",
     "vue3-blocks-tree": "^0.6.1",
     "vxe-table": "^4.7.16",
