--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
     "resolveJsonModule": true,
     "types": [
       "vite/client",
+      "vite-plugin-pages/client",
+      "vite-plugin-vue-meta-layouts/client",
       "element-plus/global"
     ],
     "allowImportingTsExtensions": true,
