--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pinia": "^2.1.7",
     "qs": "^6.12.1",
     "sortablejs": "^1.15.2",
+    "spinkit": "^2.0.1",
     "vconsole": "^3.15.1",
     "vue": "^3.4.29",
     "vue-codemirror": "^6.1.1",
