--- a/package.json
+++ b/package.json
@@ -23,16 +23,24 @@
     "lint:stylelint": "stylelint \"src/**/*.{css,scss,vue}\" --cache --fix"
   },
   "dependencies": {
+    "@antv/g2plot": "^2.4.31",
+    "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/vue-next": "^1.21.0",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.1",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@headlessui/vue": "^1.7.22",
     "@imengyu/vue3-context-menu": "^1.4.1",
+    "@tinymce/tinymce-vue": "^6.0.1",
+    "@visactor/vchart": "^1.11.3",
     "@vueuse/core": "^10.11.0",
     "@vueuse/integrations": "^10.11.0",
     "add": "^2.0.6",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
+    "bytemd": "^1.21.0",
     "codemirror": "^6.0.1",
+    "echarts": "^5.5.0",
     "element-plus": "^2.7.5",
     "eruda": "^3.0.1",
     "floating-vue": "5.2.2",
@@ -43,22 +51,33 @@
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "overlayscrollbars": "^2.8.3",
     "overlayscrollbars-vue": "^0.5.9",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.2",
     "pinia": "^2.1.7",
+    "pinyin-pro": "^3.22.2",
+    "print-js": "^1.6.0",
+    "qrcode": "^1.5.3",
     "qs": "^6.12.1",
     "sortablejs": "^1.15.2",
     "spinkit": "^2.0.1",
+    "splitpanes": "^3.1.5",
+    "swiper": "^11.1.4",
+    "tinymce": "^7.1.2",
+    "v-wave": "^2.0.0",
     "vconsole": "^3.15.1",
     "vue": "^3.4.29",
     "vue-codemirror": "^6.1.1",
     "vue-currency-input": "^3.1.0",
+    "vue-esign": "^1.1.4",
+    "vue-hooks-plus": "^2.2.0",
     "vue-i18n": "^9.13.1",
     "vue-json-pretty": "^2.3.0",
     "vue-m-message": "^4.0.2",
     "vue-router": "^4.3.3",
     "vue3-blocks-tree": "^0.6.1",
+    "vue3-count-to": "^1.1.2",
     "vxe-table": "^4.7.16",
     "vxe-table-plugin-element": "^4.0.0",
     "xe-utils": "^3.5.27"
@@ -72,8 +91,10 @@
     "@types/mockjs": "^1.0.10",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.2",
+    "@types/qrcode": "^1.5.5",
     "@types/qs": "^6.9.15",
     "@types/sortablejs": "^1.15.8",
+    "@types/splitpanes": "^2.2.6",
     "@unocss/eslint-plugin": "^0.61.0",
     "@vitejs/plugin-legacy": "^5.4.1",
     "@vitejs/plugin-vue": "^5.0.5",
