功能图片预览

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "hotkeys-js": "^3.13.7",
     "js-base64": "^3.7.6",
     "lodash-es": "^4.17.21",
+    "medium-zoom": "^1.1.0",
     "mitt": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
