--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 # 应用配置面板
-VITE_APP_SETTING = false
+VITE_APP_SETTING = true
 # 页面标题
 VITE_APP_TITLE = admin 专业版
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
@@ -7,10 +7,10 @@ VITE_APP_API_BASEURL = /
 # 调试工具，可设置 eruda 或 vconsole，如果不需要开启则留空
 VITE_APP_DEBUG_TOOL =
 # 是否禁用开发者工具，可防止被调试
-VITE_APP_DISABLE_DEVTOOL = true
+VITE_APP_DISABLE_DEVTOOL = false
 
 # 是否在打包时启用 Mock
-VITE_BUILD_MOCK = false
+VITE_BUILD_MOCK = true
 # 是否在打包时生成 sourcemap
 VITE_BUILD_SOURCEMAP = false
 # 是否在打包时删除 console 代码
