修复i18插件不能正常显示，以及添加功能

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,8 +9,7 @@
     "Lokalise.i18n-ally",
     "antfu.unocss",
     "esbenp.prettier-vscode",
-    "mrmlnc.vscode-less",
-    "heybourn.headwind"
+    "mrmlnc.vscode-scss"
   ]
 
 }
