--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,13 +24,16 @@
     "jsonc",
     "yaml"
   ],
-  "i18n-ally.localesPaths": [
-    "src/locales/lang"
-  ],
-  "i18n-ally.displayLanguage": "zh-cn",
-  "i18n-ally.editor.preferEditor": true,
+  "i18n-ally.localesPaths": ["src/locales/lang"],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.sortKeys": true,
+  "i18n-ally.namespace": true,
+  "i18n-ally.pathMatcher": "{locale}/{namespaces}.{ext}",
+  "i18n-ally.enabledParsers": ["json", "ts", "js"],
+  "i18n-ally.sourceLanguage": "en",
+  "i18n-ally.displayLanguage": "zh-cn",
+  "i18n-ally.enabledFrameworks": ["vue", "react"],
+  "i18n-ally.indent": 2,
   "i18n-ally.keepFulfilled": true,
-  "i18n-ally.indent": 2
+  "i18n-ally.editor.preferEditor": true
 }
