--- a/.env.production
+++ b/.env.production
@@ -16,8 +16,8 @@ VITE_BUILD_SOURCEMAP = false
 # 是否在打包时删除 console 代码
 VITE_BUILD_DROP_CONSOLE = true
 # 是否在打包时开启压缩，支持 gzip 和 brotli
-VITE_BUILD_COMPRESS =
+VITE_BUILD_COMPRESS = gzip,brotli
 # 是否在打包后生成存档，支持 zip 和 tar
-VITE_BUILD_ARCHIVE =
+VITE_BUILD_ARCHIVE = zip
 # 是否在打包时候生成PWA
 VITE_BUILD_PWA = false
