--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@fast-crud/fast-crud": "^1.25.0",
+    "@fast-crud/fast-extends": "^1.25.0",
+    "@fast-crud/ui-element": "^1.25.0",
+    "@fast-crud/ui-interface": "^1.25.0",
     "@headlessui/vue": "^1.7.23",
     "@tanstack/vue-store": "^0.5.6",
     "@tinymce/tinymce-vue": "^6.1.0",
