--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@codemirror/theme-one-dark": "^6.1.2",
     "@fast-crud/fast-crud": "^1.25.0",
     "@fast-crud/fast-extends": "^1.25.0",
-    "@fast-crud/ui-element": "^1.25.0",
+    "@fast-crud/ui-antdv4": "^1.25.0",
     "@fast-crud/ui-interface": "^1.25.0",
     "@headlessui/vue": "^1.7.23",
     "@tanstack/vue-store": "^0.5.6",
@@ -48,6 +48,7 @@
     "@vueuse/integrations": "^12.5.0",
     "add": "^2.0.6",
     "animate.css": "^4.1.1",
+    "ant-design-vue": "4.x",
     "axios": "^1.7.8",
     "bytemd": "^1.21.0",
     "class-variance-authority": "^0.7.1",
@@ -58,7 +59,6 @@
     "defu": "^6.1.4",
     "disable-devtool": "^0.3.8",
     "echarts": "^5.6.0",
-    "element-plus": "^2.9.3",
     "eruda": "^3.4.1",
     "es-toolkit": "^1.31.0",
     "floating-vue": "5.2.2",
