--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,8 +26,7 @@
       "vite/client",
       "vite-plugin-pages/client",
       "vite-plugin-vue-meta-layouts/client",
-      "vite-plugin-app-loading/client",
-      "element-plus/global"
+      "vite-plugin-app-loading/client"
     ],
     "allowImportingTsExtensions": true,
     "allowJs": false,
